# Absinthe

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  conanfile.py
include/absinthe/: application.hpp  chat_client.hpp  chat_handler.hpp  chat_whitelist.hpp
src/app/: application.cpp  chat_client.cpp  chat_handler.cpp  chat_whitelist.cpp
src/cli/: main.cpp
